# frigate-zmq-detector

./: .gitignore  Cargo.toml  Containerfile  LICENSE-MIT  README.md  build.rs  entrypoint.sh  frigate-example.yml
src/: backend.rs  cli.rs  error.rs  main.rs  protocol.rs  tflite.rs  watchdog.rs
