[package]
name = "frigate-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
edgefirst-tflite = "0.7.0"
env_logger = "0.11.10"
log = "0.4.29"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt", "time", "macros", "net", "sync", "rt-multi-thread"] }
zeromq = { version = "0.6.0", features = ["tcp-transport", "ipc-transport", "tokio-runtime"] }
